--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -435,7 +435,7 @@ body {
 }
 
 .pabout .pabout__pbox--right {
-    background-image: url(../assets/svg/network.png);
+    background-image: url(../svg/network.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 60%;
